@@ -501,7 +501,7 @@ access DF memory and allow for easier development of new tools.</p>
 <li><a class="reference internal" href="#binpatch" id="id132">binpatch</a></li>
 <li><a class="reference internal" href="#create-items" id="id133">create-items</a></li>
 <li><a class="reference internal" href="#digfort" id="id134">digfort</a></li>
-<li><a class="reference internal" href="#drainaquifer" id="id135">drainaquifer</a></li>
+<li><a class="reference internal" href="#drain-aquifer" id="id135">drain-aquifer</a></li>
 <li><a class="reference internal" href="#deathcause" id="id136">deathcause</a></li>
 <li><a class="reference internal" href="#dfstatus" id="id137">dfstatus</a></li>
 <li><a class="reference internal" href="#embark" id="id138">embark</a></li>
@@ -2873,8 +2873,8 @@ as an offset for the pattern: instead of starting at the cursor, it will start
 <p>The script takes the plan filename, starting from the root df folder (where
 Dwarf Fortress.exe is found).</p>
 </div>
-<div class="section" id="drainaquifer">
-<h2><a class="toc-backref" href="#id135">drainaquifer</a></h2>
+<div class="section" id="drain-aquifer">
+<h2><a class="toc-backref" href="#id135">drain-aquifer</a></h2>
 <p>Remove all 'aquifer' tag from the map blocks. Irreversible.</p>
 </div>
 <div class="section" id="deathcause">
